Java 1.6+ compatibility (at least) instead of 1.8+ only TODO: fix Locale problem (doesn't seem to work for non-default currently)